--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,9 @@
 name: Sugarcanetracker
 version: ${project.version}
 main: me.darkeyedragon.sugarcanetracker.Sugarcanetracker
-api-version: 1.13
+author: KrypticOP
+commands:
+  sugarcanestats:
+    description: Show the sugarcane leaderboard
+    usage: /st <stats/reload>
+    aliases: [sugarcanetracker, st, sugartracker, sugarstats]
